force-app/main/default/objects/cpm__Inbound_Report__c/cpm__Inbound_Report__c.object-meta.xml
<CustomObject>
    <description>Contains incoming Reports that correlate to transactions started from PaymentHub, for example BACS reports.</description>
    <label>Inbound Report</label>
    <nameField>
        <displayFormat>IR-{0}</displayFormat>
        <label>Inbound Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>