force-app/main/default/objects/cpm__Inbound_Report__c/fields/Anonymous_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Account_Name__c</fullName>
    <formula>&quot;Anonymous Donor FY&quot;&amp;
RIGHT
(

TEXT(
IF(
 MONTH( cpm__Date__c ) &lt;4,
 YEAR(cpm__Date__c)-1,
 YEAR(cpm__Date__c)
)
)

, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anonymous Account Name</label>
    <type>Text</type>
</CustomField>