force-app/main/default/objects/cpm__Inbound_Report__c/fields/Case_Safe_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Email__c</fullName>
    <formula>LOWER( Donor_Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Email</label>
    <type>Text</type>
</CustomField>