force-app/main/default/objects/cpm__Inbound_Report__c/fields/Commitment_Name__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Name__c</fullName>
    <formula>&quot;Donation From &quot;&amp;

IF( ISBLANK(First_Name__c) &amp;&amp;  Last_Name__c = &quot;Anon&quot;,

 &quot;FareShare Supporter&quot;,

 IF(ISBLANK(First_Name__c),

  Salutation__c &amp; &quot; &quot; &amp;  Last_Name__c,

  First_Name__c &amp; &quot; &quot; &amp;  Last_Name__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitment Name</label>
    <type>Text</type>
</CustomField>