force-app/main/default/objects/cpm__Inbound_Report__c/fields/Contact_Point_Type_Consent_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point_Type_Consent_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point Type Consent - Email</label>
    <referenceTo>ContactPointTypeConsent</referenceTo>
    <relationshipLabel>Inbound Reports</relationshipLabel>
    <relationshipName>Inbound_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>