force-app/main/default/objects/cpm__Inbound_Report__c/fields/Contact_Point_Type_Consent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point_Type_Consent_Phone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point Type Consent - Phone</label>
    <referenceTo>ContactPointTypeConsent</referenceTo>
    <relationshipLabel>Inbound Reports (Contact Point Type Consent - Phone)</relationshipLabel>
    <relationshipName>Inbound_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>