force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Accepted__c.field-meta.xml
<CustomField>
    <fullName>cpm__Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>