force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Account__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Reports</relationshipLabel>
    <relationshipName>Inbound_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>