force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account_Holder_Name__c</fullName>
    <label>Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>