force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account_Number__c</fullName>
    <label>Account Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>