force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Account_Number_Additional__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account_Number_Additional__c</fullName>
    <label>Account Number Additional</label>
    <length>15</length>
    <type>Text</type>
</CustomField>