force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Amount__c.field-meta.xml
<CustomField>
    <fullName>cpm__Amount__c</fullName>
    <description>The amount of this transaction.</description>
    <inlineHelpText>The amount of this transaction.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>