force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Campaign_Member_Id__c</fullName>
    <label>Campaign Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>