force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Checksum__c.field-meta.xml
<CustomField>
    <fullName>cpm__Checksum__c</fullName>
    <label>Checksum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>