force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Debit_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Debit_Credit_Type__c</fullName>
    <label>Debit Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>