force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Document_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Document_Type__c</fullName>
    <description>Document Type</description>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>