force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Event_DateTime_ISO8601__c.field-meta.xml
<CustomField>
    <fullName>cpm__Event_DateTime_ISO8601__c</fullName>
    <description>Event Date Time stored as String with millisecond precision</description>
    <label>Event Date ISO8601</label>
    <length>50</length>
    <type>Text</type>
</CustomField>