force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Existing_Installment_Expected__c.field-meta.xml
<CustomField>
    <fullName>cpm__Existing_Installment_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Installment Expected</label>
    <type>Checkbox</type>
</CustomField>