force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__File_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__File_Reference__c</fullName>
    <description>The matched (bulk) file this inbound report belongs to.</description>
    <label>File Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>