force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Guided_Matching_Nr_of_Rules_Processed__c.field-meta.xml
<CustomField>
    <fullName>cpm__Guided_Matching_Nr_of_Rules_Processed__c</fullName>
    <label>Guided Matching Nr of Rules Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>