force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Job_Group_Identifier__c.field-meta.xml
<CustomField>
    <fullName>cpm__Job_Group_Identifier__c</fullName>
    <description>Field to store the Job group identifier from cpm__Job__c</description>
    <label>Job Group Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>