force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Matched_By_ProcessingHub__c.field-meta.xml
<CustomField>
    <fullName>cpm__Matched_By_ProcessingHub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matched By ProcessingHub</label>
    <type>Checkbox</type>
</CustomField>