force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Open_Amount__c.field-meta.xml
<CustomField>
    <fullName>cpm__Open_Amount__c</fullName>
    <label>Open Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>