force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Payment_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Intent_Id__c</fullName>
    <externalId>true</externalId>
    <label>Payment Intent Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>