force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Reference__c</fullName>
    <label>Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>