force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Post_Office__c.field-meta.xml
<CustomField>
    <fullName>cpm__Post_Office__c</fullName>
    <label>Post Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>