force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Reasoncode_Explaination__c.field-meta.xml
<CustomField>
    <fullName>cpm__Reasoncode_Explaination__c</fullName>
    <label>Reasoncode Explaination</label>
    <type>TextArea</type>
</CustomField>