force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Reasoncode_Explanation__c.field-meta.xml
<CustomField>
    <fullName>cpm__Reasoncode_Explanation__c</fullName>
    <label>Reasoncode Explanation</label>
    <type>TextArea</type>
</CustomField>