force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>