force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Report_Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Report_Status__c</fullName>
    <label>Report Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>