force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Report_Status_Reason_Information__c.field-meta.xml
<CustomField>
    <fullName>cpm__Report_Status_Reason_Information__c</fullName>
    <label>Report Status Reason Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>