force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Report_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BACS</fullName>
            </value>
            <value>
                <fullName>SEPA</fullName>
            </value>
            <value>
                <fullName>MandateUpdate</fullName>
            </value>
            <value>
                <fullName>SEDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>