force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>