force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Source__c.field-meta.xml
<CustomField>
    <fullName>cpm__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>