force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>cpm__Status_Reason__c</fullName>
    <description>Reason of selected status. If error occured this is the place to save it</description>
    <label>Status Reason</label>
    <type>TextArea</type>
</CustomField>