force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>cpm__Transaction_Code__c</fullName>
    <label>Transaction Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>