force-app/main/default/objects/cpm__Inbound_Report__c/fields/cpm__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>cpm__Unique_Identifier__c</fullName>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>