force-app/main/default/objects/cpm__Inbound_Report__c/fields/Donor_Email__c.field-meta.xml
<CustomField>
    <fullName>Donor_Email__c</fullName>
    <label>Donor Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>