force-app/main/default/objects/cpm__Inbound_Report__c/fields/Donor_Gift_Transaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Gift_Transaction_Name__c</fullName>
    <formula>First_Name__c  
&amp; &quot; &quot; &amp;
 Last_Name__c 
&amp; &quot; - &quot; &amp; 

IF(LEN(TEXT(Net_Donation__c))=2,
  TEXT(Net_Donation__c)&amp;&quot;.00&quot;,
  IF(LEN(TEXT(Net_Donation__c))=4,
   TEXT(Net_Donation__c)&amp;&quot;0&quot;,
   TEXT(Net_Donation__c)
   )
   )

&amp; &quot; - &quot; &amp; 

IF(LEN(TEXT( DAY(  cpm__Date__c  ) ))=1,
&quot;0&quot;&amp; TEXT( DAY( cpm__Date__c  ) ), 
TEXT( DAY( cpm__Date__c  ) ))

&amp; &quot;/&quot; &amp; 

IF(LEN(TEXT( MONTH( cpm__Date__c  ) ))=1,
&quot;0&quot;&amp; TEXT( MONTH( cpm__Date__c  ) ), 
TEXT( MONTH( cpm__Date__c  ) ))


 &amp; &quot;/&quot; &amp;  


TEXT( YEAR(  cpm__Date__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Gift Transaction Name</label>
    <type>Text</type>
</CustomField>