force-app/main/default/objects/cpm__Inbound_Report__c/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <description>The Donor ID  from the agency the donation was made via.</description>
    <label>Donor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>