force-app/main/default/objects/cpm__Inbound_Report__c/fields/Donor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Donor_Phone__c</fullName>
    <label>Donor Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>