force-app/main/default/objects/cpm__Inbound_Report__c/fields/Duplicate_Gift_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Gift_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Gift Transaction</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Inbound Reports (Duplicate Gift Transaction)</relationshipLabel>
    <relationshipName>Inbound_Reports2</relationshipName>
    <type>Lookup</type>
</CustomField>