force-app/main/default/objects/cpm__Inbound_Report__c/fields/Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent__c</fullName>
    <label>Email Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>