force-app/main/default/objects/cpm__Inbound_Report__c/fields/Employer_Account__c.field-meta.xml
<CustomField>
    <fullName>Employer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Reports (Employer Account)</relationshipLabel>
    <relationshipName>Inbound_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>