force-app/main/default/objects/cpm__Inbound_Report__c/fields/Employer_Gift_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Employer_Gift_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer Gift Transaction</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Inbound Reports (Employer Gift Transaction)</relationshipLabel>
    <relationshipName>Inbound_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>