force-app/main/default/objects/cpm__Inbound_Report__c/fields/Employer_Gift_Transaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Gift_Transaction_Name__c</fullName>
    <formula>&quot;Donation From &quot;&amp; Employer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Gift Transaction Name</label>
    <type>Text</type>
</CustomField>