force-app/main/default/objects/cpm__Inbound_Report__c/fields/Employer_Matched_Donation__c.field-meta.xml
<CustomField>
    <fullName>Employer_Matched_Donation__c</fullName>
    <label>Employer Matched Donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>