force-app/main/default/objects/cpm__Inbound_Report__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>The name of the employer captured by the agency the donation was made via. Used to identify the account for the related organisation.</description>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>