force-app/main/default/objects/cpm__Inbound_Report__c/fields/gcf__GoCardless_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>gcf__GoCardless_Customer_Id__c</fullName>
    <label>GoCardless_Customer_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>