force-app/main/default/objects/cpm__Inbound_Report__c/fields/gcf__GoCardless_Scheme__c.field-meta.xml
<CustomField>
    <fullName>gcf__GoCardless_Scheme__c</fullName>
    <description>The scheme name that go GoCardless uses for the different payment Methods (Bacs, faster_payments)</description>
    <label>GoCardless Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>