force-app/main/default/objects/cpm__Inbound_Report__c/fields/Gift_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Gift_Commitment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Commitment</label>
    <referenceTo>GiftCommitment</referenceTo>
    <relationshipLabel>Inbound Reports</relationshipLabel>
    <relationshipName>Inbound_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>