force-app/main/default/objects/cpm__Inbound_Report__c/fields/Gift_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Gift_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Transaction</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Inbound Reports</relationshipLabel>
    <relationshipName>Inbound_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>