force-app/main/default/objects/cpm__Inbound_Report__c/fields/Net_Donation__c.field-meta.xml
<CustomField>
    <fullName>Net_Donation__c</fullName>
    <label>Net Donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>