force-app/main/default/objects/cpm__Inbound_Report__c/fields/Phone_Consent_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Phone_Consent_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Consent - Opt In</label>
    <type>Checkbox</type>
</CustomField>