force-app/main/default/objects/cpm__Inbound_Report__c/fields/Post_Consent__c.field-meta.xml
<CustomField>
    <fullName>Post_Consent__c</fullName>
    <label>Post Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>