force-app/main/default/objects/cpm__Inbound_Report__c/fields/Post_Consent_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Post_Consent_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Consent Opt In</label>
    <type>Checkbox</type>
</CustomField>