force-app/main/default/objects/cpm__Inbound_Report__c/fields/proh__Original_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>proh__Original_Transaction_Id__c</fullName>
    <label>Original Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>