force-app/main/default/objects/cpm__Inbound_Report__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>